# mannequin

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Readme.md  crates.js  dprint.json  glossary.md  help.html  index.html  notes.md  search-index.js  settings.html  src-files.js  todos.md  typos.toml
.github/workflows/: rust.yml
mannequin/: all.html  index.html  sidebar-items.js
mannequin/arena/: index.html  sidebar-items.js  struct.ArenaNode.html  struct.ArenaTree.html  struct.DepthFirstIterator.html
mannequin/dummy/: index.html  sidebar-items.js  struct.DummyBody.html
mannequin/iterable_tree/: enum.Order.html  index.html  sidebar-items.js  trait.Nodelike.html  trait.TreeIterable.html
mannequin/mannequin/: index.html  sidebar-items.js  struct.Mannequin.html  trait.Forward.html  trait.Inverse.html
mannequin/rigid/: fn.accumulate.html  index.html  sidebar-items.js  trait.Accumulator.html  trait.Rigid.html
search.desc/mannequin/: mannequin-desc-0-.js
src/: arena.rs  body.rs  differentiable.rs  dummy.rs  errors.rs  faer.rs  forward.rs  inverse.rs  iterable_tree.rs  iterables.rs  iterator.rs  jacobi.rs  kinematics.rs  lib.rs  mannequin.rs  rigid.rs  utils.rs
src/arena/: accumulatable.rs  arena_tree.rs  breadth.rs  depth.rs  directed.rs  iterables.rs  iterators.rs  mod.rs  utils.rs
src/mannequin/: arena.rs.html  dummy.rs.html  iterable_tree.rs.html  lib.rs.html  mannequin.rs.html  rigid.rs.html
src/ndarray/: basic.rs  default.rs  mod.rs  robot.rs
src/tree/: iterator.rs  mod.rs  visitable.rs  visiting.rs
src/visitor/: visitable.rs
tests/: test_ndarray.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/iter/traits/iterator/: trait.Iterator.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/mannequin/rigid/: trait.Rigid.js
