[package]
name = "mannequin"
version = "0.2.0"
authors = ["Stefan Ulbrich"]
documentation = "https://github.com/biomechanics-foundation/mannequin"
edition = "2021"
homepage = "https://github.com/biomechanics-foundation/mannequin"
license = "MIT OR Apache-2.0"
repository = "https://github.com/biomechanics-foundation/mannequin"
rust-version = "1.67"

readme = "Readme.md"
description = "Direkt and inverse kinematics for biomechanics, robotics and character animation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faer = { version = "0.19.4", optional = true }
itertools = "0.13.0"
nalgebra = { version = "0.33.2", optional = true }
ndarray = { version = "0.16.1", optional = true, features = ["approx", "rayon"] }
thiserror = "2.0.7"
tracing = "0.1.41"
tracing-attributes = "0.1.28"

[features]
ndarray = ["dep:ndarray"]
faer = ["dep:faer"]
nalgebra = ["dep:nalgebra"]

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
